app/src/main/java/com/example/ui/theme/Color.kt
package com.example.ui.theme

import androidx.compose.ui.graphics.Color

// LunaCare Soft Cream Palette (Exactly matching Design Tokens)
val SoftCreamBackground = Color(0xFFFFF8F7) // background / surface: #fff8f7
val SoftCardSurface = Color(0xFFF8EBEA)     // surface-container: #f8ebea
val MutedRosePrimary = Color(0xFF8A4D4E)    // primary: #8a4d4e
val LavenderSecondary = Color(0xFF5D5A84)   // secondary: #5d5a84
val WarmCoralTertiary = Color(0xFF8D4D39)   // tertiary: #8d4d39
val DarkPlumText = Color(0xFF201A1A)        // on-surface / text: #201a1a
val TextMuted = Color(0xFF524343)           // on-surface-variant: #524343

// Container styles matching design token palette
val PrimaryContainer = Color(0xFFD48C8C)    // primary-container: #d48c8c
val SecondaryContainer = Color(0xFFD1CCFE)  // secondary-container: #d1ccfe
val TertiaryContainer = Color(0xFFD88C73)   // tertiary-container: #d88c73
val SurfaceContainerLow = Color(0xFFFEF1F0)
val SurfaceContainerHigh = Color(0xFFF2E5E4)
val SurfaceContainerHighest = Color(0xFFECE0DF)

// Dark theme palette adjusted to preserve design tokens elegantly
val DarkPlumBackground = Color(0xFF201A1A)  // Deep rich dark plum background
val DarkCardSurface = Color(0xFF2D2323)     // Dark card surface
val MutedRoseLight = Color(0xFFD48C8C)      // Soft lightened rose for dark theme
val LavenderLight = Color(0xFFD1CCFE)       // Soft lightened lavender
val WarmCoralLight = Color(0xFFD88C73)      // Soft lightened coral

// Functional indicators
val SuccessGreen = Color(0xFF7EA180)        // Calm green
val WarningAmber = Color(0xFFE0A96D)        // Balanced orange-amber
val AlertRed = Color(0xFFBA1A1A)            // error: #ba1a1a
val AlertRedContainer = Color(0xFFFFDAD6)   // error-container: #ffdad6

